--- a/boyoblue/templates/boyoblue/footer.html
+++ b/boyoblue/templates/boyoblue/footer.html
@@ -1,7 +1,10 @@
 <footer class="footer">
-  <p id="footer_credit" class="txt_s">created by
-    <a class="footer_github" href="https://github.com/pataman3">B. Bean</a>
-    and <a class="footer_github" href="https://github.com/Peter-Lavigne">P. Lavigne</a>
+  <a id="footer_about" href="/about">about</a>
+  <p id="footer_credit">
+    created by 
+    <a href="https://github.com/pataman3">B. Bean</a>
+    and 
+    <a href="https://github.com/Peter-Lavigne">P. Lavigne</a>
   </p>
-  <p id="footer_about_us" class="txt_s"><a class="footer_about_us_link" href="/about-us">about us</a></p>
+  <a id="footer_terms" href="/terms">terms</a>
 </footer>
