--- a/boyoblue/templates/boyoblue/terms.html
+++ b/boyoblue/templates/boyoblue/terms.html
@@ -2,5 +2,7 @@
 {% block title %} About us{% endblock %}
 
 {% block body %}
-  <p style='color:#FAFAFA'>Just a placeholder.</p>
+  <div class="content">
+    <p>This is just a placeholder.</p>
+  </div>
 {% endblock %}
