--- a/boyoblue/templates/boyoblue/about.html
+++ b/boyoblue/templates/boyoblue/about.html
@@ -2,5 +2,7 @@
 {% block title %} About us{% endblock %}
 
 {% block body %}
-  <p style='color:#FAFAFA'>We're just two programmers who like media.</p>
+  <div class="content">
+    <p>We're just two programmers who like media.</p>
+  </div>
 {% endblock %}
