--- a/reviews/templates/reviews/list.html
+++ b/reviews/templates/reviews/list.html
@@ -7,6 +7,29 @@
       {% for review, review_card, media, body in reviews %}
         {% include review_card %}
       {% endfor %}
+      {% if paginator.has_other_pages %}
+      <div class="paginator">
+        {% if paginator.has_previous %}
+        <a href="?page={{ reviews.previous_page_number }}">&laquo;</a>
+        {% else %}
+        <span>&laquo;</span>
+        {% endif %}
+
+        {% for i in paginator.paginator.page_range %}
+        {% if reviews.number == i %}
+        <a href="?page={{ i }}">{{ i }}</a>
+        {% else %}
+        <a href="?page={{ i }}">{{ i }}</a>
+        {% endif %}
+        {% endfor %}
+
+        {% if paginator.has_next %}
+        <a href="?page={{ users.next_page_number }}">&raquo;</a>
+        {% else %}
+        <span>&raquo;</span>
+        {% endif %}
+      </div>
+      {% endif %}
     {% else %}
       <h1>There are no reviews to display</h1>
     {% endif %}
