Fix review detail page

--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -1,6 +1,6 @@
-{% extends 'reviews/reviews.html' %}
-{% block title %} / Review detail{% endblock %}
+{% extends 'boyoblue/core.html' %}
+{% block title %} Review detail{% endblock %}
 
-{% block content %}
-<p>PLACEHOLDER</p>
+{% block body %}
+{% include card %}
 {% endblock %}
