--- a/reviews/templates/reviews/media/song.html
+++ b/reviews/templates/reviews/media/song.html
@@ -7,7 +7,11 @@
   </div>
   <div class="r_l_song_card_text text r_l_card_text">
     <p>A review of "{{ media.name }}" by {{ media.artist }}</p><br>
-    <p>{{ body }}</p><br>
+    <p>
+      {{ body }}
+      {% if truncate_body %}... <a href="/reviews/detail/{{ review.pk }}">(See full review)</a>{% endif %}
+    </p>
+    <br>
     <p>Posted {{ review.date|timesince }} ago by {{ review.author }}</p>
   </div>
 </div>
