Fixed paginator buttons

--- a/search/templates/search/list.html
+++ b/search/templates/search/list.html
@@ -14,11 +14,11 @@
   </div>
   <div class="paginator">
     {% if page != 1 %}
-    <a href="?media={{ media }}s&q={{ query }}&page={{ previous_page }}">&laquo;</a>
+    <a class="text-m" href="?media={{ media }}s&q={{ query }}&page={{ previous_page }}"><i class="fas fa-caret-left"></i></a>
     {% else %}
-    <span>&laquo;</span>
+    <i class="fas fa-caret-left" style="font-size: 24px;"></i>
     {% endif %}
 
-    <a href="?media={{ media }}&q={{ query }}&page={{ next_page }}">&raquo;</a>
+    <a class="text-m" href="?media={{ media }}&q={{ query }}&page={{ next_page }}"><i class="fas fa-caret-right"></i></a>
   </div>
 {% endblock %}
