--- a/boyoblue/static/styles/stylesheet.css
+++ b/boyoblue/static/styles/stylesheet.css
@@ -199,7 +199,6 @@ html, body {
   grid-area: content;
 
   background-color: #FAFAFA;
-  border: 3px solid #639bff;
   border-radius: 6px;
   padding: 30px;
 }
@@ -229,6 +228,31 @@ html, body {
   height: 3px;
   width: 100%;
 }
+
+.paginator {
+  grid-column: 1 / -1;
+
+  border: 0;
+  border-radius: 6px;
+  text-align: center;
+}
+.paginator > a, .paginator > i {
+  display: inline-block;
+
+  border: 0;
+  border-radius: 6px;
+  padding: 5px 15px 5px 15px;
+  text-align: center;
+}
+.paginator > a {
+  color: #FAFAFA;
+  background-color: #639bff;
+}
+.paginator > i {
+  color: #FAFAFA;
+  background-color: #343a40;
+}
+
 
 
 
