--- a/reviews/templates/reviews/list.html
+++ b/reviews/templates/reviews/list.html
@@ -10,23 +10,23 @@
       {% if paginator.has_other_pages %}
       <div class="paginator">
         {% if paginator.has_previous %}
-        <a href="?page={{ reviews.previous_page_number }}">&laquo;</a>
+        <a class="text-m" href="?page={{ reviews.previous_page_number }}"><i class="fas fa-caret-left"></i></a>
         {% else %}
-        <span>&laquo;</span>
+        <i class="fas fa-caret-left" style="font-size: 24px;"></i>
         {% endif %}
 
         {% for i in paginator.paginator.page_range %}
         {% if reviews.number == i %}
-        <a href="?page={{ i }}">{{ i }}</a>
+        <a class="text-m" href="?page={{ i }}">{{ i }}</a>
         {% else %}
-        <a href="?page={{ i }}">{{ i }}</a>
+        <a class="text-m" href="?page={{ i }}">{{ i }}</a>
         {% endif %}
         {% endfor %}
 
         {% if paginator.has_next %}
-        <a href="?page={{ users.next_page_number }}">&raquo;</a>
+        <a class="text-m" href="?page={{ users.next_page_number }}"><i class="fas fa-caret-right"></i></a>
         {% else %}
-        <span>&raquo;</span>
+        <i class="fas fa-caret-right" style="font-size: 24px;"></i>
         {% endif %}
       </div>
       {% endif %}
