--- a/reviews/templates/reviews/create.html
+++ b/reviews/templates/reviews/create.html
@@ -3,10 +3,21 @@
 {% block body %}
 <div class="container-fluid bg-dark">
   <div class="card">
-    <form action="{% url 'reviews:create' %}" method="post">
+    <form action="/reviews/create/" method="post">
       {% csrf_token %}
-      {{ form }}
-      <button type="submit" class="btn btn-primary">create post</button>
+      <input type="hidden" name="api_id" value="{{ api_id }}">
+      <input type="hidden" name="type" value="{{ type }}">
+
+      <p>Score (1 to 10):</p>
+      <input type="number" name="score" min="1" max="10">
+
+      <p>Review title:</p>
+      <input type="text" name="title" maxlength="128" required>
+
+      <p>Review body (optional):</p>
+      <textarea name="body" cols="40" rows="10"></textarea>
+
+      <button type="submit" class="btn btn-primary">Create review</button>
     </form>
   </div>
 </div>
