--- a/reviews/templates/reviews/media/book.html
+++ b/reviews/templates/reviews/media/book.html
@@ -6,7 +6,7 @@
     <p>{{ review.score }}/10: {{ review.title }}</p>
   </div>
   <div class="r_l_book_card_text text r_l_card_text">
-    <p>A review of {{ media.title }} by {{ media.author }}</p><br>
+    <p>A review of the book {{ media.title }} by {{ media.author }}</p><br>
     <p>
       {{ body }}
       {% if truncate_body %}... <a href="/reviews/detail/{{ review.pk }}">(See full review)</a>{% endif %}
