Fix pagination backtracking

--- a/search/templates/search/list.html
+++ b/search/templates/search/list.html
@@ -14,7 +14,7 @@
   </div>
   <div class="paginator">
     {% if page != 1 %}
-    <a class="text-m" href="?media={{ media }}s&q={{ query }}&page={{ previous_page }}"><i class="fas fa-caret-left"></i></a>
+    <a class="text-m" href="?media={{ media }}&q={{ query }}&page={{ previous_page }}"><i class="fas fa-caret-left"></i></a>
     {% else %}
     <i class="fas fa-caret-left" style="font-size: 24px;"></i>
     {% endif %}
