--- a/boyoblue/templates/boyoblue/footer.html
+++ b/boyoblue/templates/boyoblue/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer">
-  <a id="footer_about" class="text-footer text-light text-link" href="/about">about</a>
+  <a id="footer_about" class="text-footer text-light text-link" href="/about">about us</a>
   <p id="footer_credit" class="text-footer text-light">
     created by 
     <a class="text-footer text-light text-link" href="https://github.com/pataman3">B. Bean</a>
     and 
     <a class="text-footer text-light text-link" href="https://github.com/Peter-Lavigne">P. Lavigne</a>
   </p>
-  <a id="footer_terms" class="text-footer text-light text-link" href="/terms">terms</a>
+  <a id="footer_terms" class="text-footer text-light text-link" href="/terms">terms of use</a>
 </footer>
