--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -2,5 +2,7 @@
 {% block title %} Review detail{% endblock %}
 
 {% block body %}
-{% include card %}
+  <div class="feed_content feed_detail_content">
+    {% include card %}
+  </div>
 {% endblock %}
