--- a/search/templates/search/albums.html
+++ b/search/templates/search/albums.html
@@ -1,12 +1,14 @@
 {% extends 'search/list.html' %}
 
 {% block result_card %}
-  <div class="s_l_album_card card">
-    <div class="s_l_album_card_title">
-      <a class="text s_l_card_title" href="/reviews/create/album/{{result.api_id}}">"{{ result.name }}" by {{ result.artist }}</a>
+  <div class="card card-2">
+    <div class="card-2-media">
+      <iframe src="https://open.spotify.com/embed?uri=spotify:album:{{ result.api_id }}" height="250px" width="100%"></iframe>
     </div>
-    <div class="s_l_album_card_media">
-      <iframe src="https://open.spotify.com/embed?uri=spotify:album:{{ result.api_id }}" width="420px" height="250px"></iframe>
+    <div class="card-2-text">
+      <a class="text-m text-dark text-link" href="/reviews/create/album/{{result.api_id}}">
+        "{{ result.name }}" by {{ result.artist }}
+      </a>
     </div>
   </div>
 {% endblock %}
