--- a/reviews/templates/reviews/media/artist.html
+++ b/reviews/templates/reviews/media/artist.html
@@ -1,19 +1,25 @@
-<div class="r_l_artist_card card">
-  <div class="r_l_artist_card_media">
-    <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:{{ media.api_id }}&size=detail&theme=light"
-              width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;"
-              allowtransparency="true"></iframe>
+<div class="card card-2">
+  <div class="card-2-media">
+    <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:{{ media.api_id }}&size=detail&theme=light" height="56px" width="100%" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
   </div>
-  <div class="r_l_artist_card_title text r_l_card_title">
-    <p>{{ review.score }}/10: {{ review.title }}</p>
-  </div>
-  <div class="r_l_artist_card_text text r_l_card_text">
-    <p>A review of the artist "{{ media.name }}"</p><br>
-    <p>
-      {{ body }}
-      {% if truncate_body %}... <a href="/reviews/detail/{{ review.pk }}">(See full review)</a>{% endif %}
+  <div class="card-2-text">
+    <p class="text-m text-dark">
+      {{ review.score }}/10: {{ review.title }}
     </p>
-    <br>
-    <p>Posted {{ review.date|timesince }} ago by {{ review.author }}</p>
+    <p class="text-s text-dark">
+      {{ body }}
+      {% if truncate_body %}
+        ... 
+        <a class="text-xs text-dark text-link" href="/reviews/detail/{{ review.pk }}">
+          See full review
+        </a>
+      {% endif %}
+    </p>
+    <p class="text-xs text-dark">
+      A review of the artist {{ media.name }}
+    </p>
+    <p class="text-xs text-dark">
+      Posted {{ review.date|timesince }} ago by {{ review.author }}
+    </p>
   </div>
 </div>
