--- a/reviews/templates/reviews/media/song.html
+++ b/reviews/templates/reviews/media/song.html
@@ -1,17 +1,25 @@
-<div class="r_l_song_card card">
-  <div class="r_l_song_card_media">
-    <iframe src="https://open.spotify.com/embed?uri=spotify:track:{{ media.api_id }}" height="80px" width="420px"></iframe>
+<div class="card card-2">
+  <div class="card-2-media">
+    <iframe src="https://open.spotify.com/embed?uri=spotify:track:{{ media.api_id }}" height="80px" width="100%"></iframe>
   </div>
-  <div class="r_l_song_card_title text r_l_card_title">
-    <p>{{ review.score }}/10: {{ review.title }}</p>
-  </div>
-  <div class="r_l_song_card_text text r_l_card_text">
-    <p>A review of "{{ media.name }}" by {{ media.artist }}</p><br>
-    <p>
-      {{ body }}
-      {% if truncate_body %}... <a href="/reviews/detail/{{ review.pk }}">(See full review)</a>{% endif %}
+  <div class="card-2-text">
+    <p class="text-m text-dark">
+      {{ review.score }}/10: {{ review.title }}
     </p>
-    <br>
-    <p>Posted {{ review.date|timesince }} ago by {{ review.author }}</p>
+    <p class="text-s text-dark">
+      {{ body }}
+      {% if truncate_body %}
+        ... 
+        <a class="text-xs text-dark text-link" href="/reviews/detail/{{ review.pk }}">
+          See full review
+        </a>
+      {% endif %}
+    </p>
+    <p class="text-xs text-dark">
+      A review of "{{ media.name }}" by {{ media.artist }}
+    </p>
+    <p class="text-xs text-dark">
+      Posted {{ review.date|timesince }} ago by {{ review.author }}
+    </p>
   </div>
 </div>
