--- a/reviews/templates/reviews/media/television.html
+++ b/reviews/templates/reviews/media/television.html
@@ -1,17 +1,25 @@
-<div class="r_l_television_card card">
-  <div class="r_l_television_card_media">
+<div class="card card-1">
+  <div class="card-1-media">
     <img src="{{ media.poster_image }}" width="120px">
   </div>
-  <div class="r_l_television_card_title text r_l_card_title">
-    <p>{{ review.score }}/10: {{ review.title }}</p>
-  </div>
-  <div class="r_l_television_card_text text r_l_card_text">
-    <p>A review of {{ media.title }}</p><br>
-    <p>
-      {{ body }}
-      {% if truncate_body %}... <a href="/reviews/detail/{{ review.pk }}">(See full review)</a>{% endif %}
+  <div class="card-1-text">
+    <p class="text-m text-dark">
+      {{ review.score }}/10: {{ review.title }}
     </p>
-    <br>
-    <p>Posted {{ review.date|timesince }} ago by {{ review.author }}</p>
+    <p class="text-s text-dark">
+      {{ body }}
+      {% if truncate_body %}
+        ... 
+        <a class="text-xs text-dark text-link" href="/reviews/detail/{{ review.pk }}">
+          See full review
+        </a>
+      {% endif %}
+    </p>
+    <p class="text-xs text-dark">
+      A review of {{ media.title }}
+    </p>
+    <p class="text-xs text-dark">
+      Posted {{ review.date|timesince }} ago by {{ review.author }}
+    </p>
   </div>
 </div>
