--- a/search/templates/search/books.html
+++ b/search/templates/search/books.html
@@ -1,12 +1,14 @@
 {% extends 'search/list.html' %}
 
 {% block result_card %}
-  <div class="s_l_book_card card">
-    <div class="s_l_book_card_media">
-      <img src="{{ result.cover_art }}" height="160px" width="107px">
+  <div class="card card-1">
+    <div class="card-1-media">
+      <img src="{{ result.cover_art }}" width="120px">
     </div>
-    <div class="s_l_book_card_title">
-      <a class="text s_l_card_title" href="/reviews/create/book/{{result.api_id}}">{{ result.title }} by {{ result.author }}</a>
+    <div class="card-1-text">
+      <a class="text-m text-dark text-link" href="/reviews/create/book/{{result.api_id}}">
+        {{ result.title }} by {{ result.author }}
+      </a>
     </div>
   </div>
 {% endblock %}
