--- a/search/templates/search/list.html
+++ b/search/templates/search/list.html
@@ -2,7 +2,7 @@
 {% block title %} / All reviews{% endblock %}
 
 {% block body %}
-  <div class="list_content">
+  <div class="feed_content feed_list_content">
     {% if results %}
       {% for result in results %}
         {% block result_card %}
