--- a/reviews/templates/reviews/media/television.html
+++ b/reviews/templates/reviews/media/television.html
@@ -16,7 +16,7 @@
       {% endif %}
     </p>
     <p class="text-xs text-dark">
-      A review of {{ media.title }}
+      A review of the television show {{ media.title }}
     </p>
     <p class="text-xs text-dark">
       Posted {{ review.date|timesince }} ago by {{ review.author }}
