--- a/reviews/templates/reviews/media/book.html
+++ b/reviews/templates/reviews/media/book.html
@@ -16,7 +16,7 @@
       {% endif %}
     </p>
     <p class="text-xs text-dark">
-      A review of "{{ media.title }}" by {{ media.author }}
+      A review of the book "{{ media.title }}" by {{ media.author }}
     </p>
     <p class="text-xs text-dark">
       Posted {{ review.date|timesince }} ago by {{ review.author }}
