--- a/boyoblue/static/styles/stylesheet.css
+++ b/boyoblue/static/styles/stylesheet.css
@@ -232,14 +232,10 @@ html, body {
 
 .paginator {
   grid-column: 1 / -1;
-
-  border: 0;
-  border-radius: 6px;
   text-align: center;
 }
 .paginator > a, .paginator > i {
   display: inline-block;
-
   border: 0;
   border-radius: 6px;
   margin: 0 1px 0 1px;
@@ -295,4 +291,18 @@ html, body {
 }
 .feed_content .card .text-xs {
   padding-top: 3px;
+}
+
+.feed_content .card-alert {
+  grid-column: 1 / -1;
+  text-align: center;
+  border: 2px dotted #639bff;
+  border-radius: 6px;
+}
+.feed_content .card-alert > * {
+  display: inline-block;
+  border: 0;
+  border-radius: 6px;
+  padding: 15px 5px 15px 5px;
+  vertical-align: middle;
 }
